# cords-semantics-lib

./: README.md  pyproject.toml  requirements.txt
cords_semantics/: mlflow.py  semantics.py  tags.py  test_fl_semantic_manager.py
data/: cords_federated_learning.rdf  cordsml.rdf
tests/: json_ld_output.json  output.rdf  semantics_test.py  test_fl_semantic_manager.py  test_semantics.py  test_true_connector.py
