[tool.poetry]
name = "cords-semantics"
version = "0.2.1"
description = ""
authors = ["Tharindu Ranathunga <tharindu.ranathunga@mtu.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
rdflib = "^7.0.0"
mlflow = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
